crates/formatter/tests/snapshots/snapshots__synapse__main__delta__32__openid.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table open_id_tokens (
	token text not null primary key,
	ts_valid_until_ms bigint not null,
	user_id text not null,
	unique (token)
);

create index open_id_tokens_ts_valid_until_ms
	on open_id_tokens (ts_valid_until_ms);
