crates/formatter/tests/snapshots/snapshots__synapse__main__delta__32__remove_indices.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2016 OpenMarket Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- The following indices are redundant, other indices are equivalent or
-- supersets
drop index if exists events_room_id; -- Prefix of events_room_stream
drop index if exists events_order; -- Prefix of events_order_topo_stream_room
drop index if exists events_topological_ordering; -- Prefix of events_order_topo_stream_room
drop index if exists events_stream_ordering; -- Duplicate of PRIMARY KEY
drop index if exists event_to_state_groups_id; -- Duplicate of PRIMARY KEY
drop index if exists event_push_actions_room_id_event_id_user_id_profile_tag; -- Duplicate of UNIQUE CONSTRAINT

drop index if exists st_extrem_id; -- Prefix of UNIQUE CONSTRAINT
drop index if exists event_signatures_id; -- Prefix of UNIQUE CONSTRAINT
drop index if exists redactions_event_id; -- Duplicate of UNIQUE CONSTRAINT

-- The following indices were unused
drop index if exists remote_media_cache_thumbnails_media_id;
drop index if exists evauth_edges_auth_id;
drop index if exists presence_stream_state;
